# FKG-core

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: fkg.example.yaml  logging.yaml
docker/: Dockerfile  docker-compose.yml
docs/: COUNTY_DEPLOY.md  FEDERATION.md  PKG_FORMAT.md
schemas/v0.1/: edge.schema.json  entity.location.json  entity.organization.json  entity.person.json  entity.service.json  pkg.manifest.json  source.schema.json
src/fkg/: __init__.py  db.py  settings.py
src/fkg/api/: __init__.py  app.py
src/fkg/api/routes/: edges.py  entities.py  health.py  pkg.py  provenance.py  whoami.py
src/fkg/changelog/: __init__.py  append.py
src/fkg/cli/: __init__.py  commands.py  main.py
src/fkg/federation/: __init__.py  pull.py  remotes.py
src/fkg/ids/: __init__.py  canonicalize.py  make_id.py
src/fkg/models/: __init__.py  edge.py  entity.py  event.py  evidence.py  source.py
src/fkg/pkg/: __init__.py  export.py  import_.py  manifest.py  sign.py
src/fkg/provenance/: __init__.py  scoring.py
src/fkg/storage/: __init__.py  edges.py  entities.py  sources.py
src/fkg/validate/: __init__.py  registry.py  validate.py
tests/: __init__.py  conftest.py  test_api_smoke.py  test_ids.py  test_pkg_roundtrip.py  test_schema_validation.py
